--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/github.png"
+                src="./assets/Screenshot (4).png"
                 alt="Project 3"
                 class="project-img"
               />
